# Kino-PAX

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
NSight/: command.md
benchmarking/: bench.m  benchmarking.py
examples/gpu/: benchMain.cu  executionTimeMain.cu  main.cu
include/collisionCheck/: collisionCheck.cuh
include/config/: config.h
include/config/obstacles/clutter/: obstacles.csv
include/config/obstacles/house/: obstacles.csv  test.csv
include/config/obstacles/narrowPassage/: obstacles.csv
include/config/obstacles/office/: obstacles.csv
include/config/obstacles/pillars/: obstacles.csv
include/config/obstacles/quadHouse/: obstacles.csv
include/config/obstacles/quadNarrowPassage/: obstacles.csv
include/config/obstacles/quadNonLinear/: obstacles.csv
include/config/obstacles/quadPillars/: obstacles.csv
include/config/obstacles/quadPillarsEasy/: obstacles.csv
include/config/obstacles/quadTrees/: obstacles.csv
include/config/obstacles/slot/: obstacles.csv
include/config/obstacles/test/: obstacles.csv
include/config/obstacles/trees/: obstacles.csv
include/graphs/: Graph.cuh
include/helper/: helper.cuh
include/planners/: KPAX.cuh  Planner.cuh
include/statePropagator/: statePropagator.cuh
src/collisionCheck/: collisionCheck.cu
src/graphs/: Graph.cu
src/helper/: helper.cu
src/planners/: KPAX.cu  Planner.cu
src/statePropagator/: statePropagator.cu
viz/: KGMT_3D.m  KGMT_3D_ExpansionColor.m  KGMT_3D_GPU.asv  KGMT_3D_GPU.m  KGMT_3D_MultiColor.m  KGMT_3D_single.asv  OMPL_3D.m
